Read resources at runtime to overcome MSCV limits

--- a/source/rainmaker.html
+++ b/source/rainmaker.html
@@ -1,4 +1,4 @@
-R""""(<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta http-equiv="Content-Type" content="charset=utf-8" />
@@ -745,4 +745,3 @@ R""""(<!DOCTYPE html>
         </script>
     </body>
 </html>
-)""""
