Add a dark mode

--- a/source/rainmaker.html
+++ b/source/rainmaker.html
@@ -19,14 +19,14 @@
                 head_radius: 0.01,
                 head_distance: 0.02,
                 colors: {
-                    axis: '#334d5c',
-                    link: '#334d5c',
-                    active: '#008cff',
-                    background: '#ffffff',
-                    separator: '#e8e8e8',
-                    controls_background: '#fafafa',
-                    nolink: '#b4b4b4',
-                    content: '#555555',
+                    axis: '{% color_axis %}',
+                    link: '{% color_link %}',
+                    active: '{% color_active %}',
+                    background: '{% color_background %}',
+                    separator: '{% color_separator %}',
+                    controls_background: '{% color_controls_background %}',
+                    nolink: '{% color_nolink %}',
+                    content: '{% color_content %}',
                 },
                 font: {
                     family: 'Helvetica, sans-serif',
